--- a/app/src/main/res/layout/activity_security_options.xml
+++ b/app/src/main/res/layout/activity_security_options.xml
@@ -136,4 +136,39 @@
         app:layout_constraintEnd_toEndOf="@+id/textView6"
         app:layout_constraintStart_toStartOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <View
+        android:id="@+id/viewDivider2"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+
+        android:layout_marginTop="16dp"
+        android:background="#ccc"
+        app:layout_constraintEnd_toEndOf="@+id/security_textView_reportList"
+        app:layout_constraintStart_toStartOf="@+id/security_textView_reportList"
+        app:layout_constraintTop_toBottomOf="@+id/security_textView_reportList"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Captured Image"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/viewDivider2"
+        app:layout_constraintStart_toStartOf="@+id/viewDivider2"
+        app:layout_constraintTop_toBottomOf="@+id/viewDivider2" />
+
+    <ImageView
+        android:id="@+id/securityOptions_imageView_cam"
+        android:layout_width="360dp"
+        android:layout_height="207dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="@+id/textView9"
+        app:layout_constraintStart_toStartOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        tools:srcCompat="@tools:sample/avatars" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
