--- a/app/src/main/res/layout/activity_security_options.xml
+++ b/app/src/main/res/layout/activity_security_options.xml
@@ -171,4 +171,15 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9"
         tools:srcCompat="@tools:sample/avatars" />
 
+    <ProgressBar
+        android:id="@+id/securityOptions_progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="@+id/textView9"
+        app:layout_constraintStart_toStartOf="@+id/textView9"
+        app:layout_constraintTop_toTopOf="@+id/securityOptions_imageView_cam" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
