--- a/app/src/main/res/layout/activity_smart_lights.xml
+++ b/app/src/main/res/layout/activity_smart_lights.xml
@@ -11,9 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
-        android:text=""
+        android:text="You are IN"
         android:textStyle="bold"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:textColor="@color/sensorRoom_text"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
