--- a/app/src/main/res/layout/activity_smart_lights.xml
+++ b/app/src/main/res/layout/activity_smart_lights.xml
@@ -129,7 +129,8 @@ android:visibility="invisible"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:textColor="@color/brightness_text"
-        android:textSize="16sp"
+        android:textSize="18sp"
+        android:text="0"
         app:layout_constraintEnd_toEndOf="@+id/smartLights_imageView_off"
         app:layout_constraintStart_toStartOf="@+id/smartLights_imageView_off"
         app:layout_constraintTop_toBottomOf="@+id/smartLights_imageView_off" />
@@ -165,7 +166,8 @@ android:visibility="invisible"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:textColor="@color/brightness_text"
-        android:textSize="16sp"
+        android:textSize="18sp"
+        android:text="0"
         app:layout_constraintEnd_toEndOf="@+id/smartLights_imageView_off"
         app:layout_constraintStart_toStartOf="@+id/smartLights_imageView_off"
         app:layout_constraintTop_toBottomOf="@+id/smartLights_imageView_off" />
@@ -199,7 +201,8 @@ android:visibility="invisible"
         android:layout_height="wrap_content"
         android:layout_marginTop="125dp"
         android:textColor="@color/brightness_text"
-        android:textSize="16sp"
+        android:textSize="18sp"
+        android:text="0"
         app:layout_constraintEnd_toEndOf="@+id/smartLights_imageView_off"
         app:layout_constraintStart_toStartOf="@+id/smartLights_imageView_off"
         app:layout_constraintTop_toBottomOf="@+id/smartLights_imageView_off" />
