--- a/app/src/main/res/layout/ultrasonic.xml
+++ b/app/src/main/res/layout/ultrasonic.xml
@@ -10,9 +10,9 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="2dp"
         android:text="@string/percentage"
-        android:textSize="25sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.164"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:text="0"
-        android:textSize="25sp"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textView8"
         app:layout_constraintTop_toTopOf="@+id/textView8" />
 
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/symbol"
-        android:textSize="25sp"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/percentage"
         app:layout_constraintTop_toTopOf="@+id/textView8" />
 
@@ -44,9 +44,9 @@
         android:layout_width="0dp"
         android:layout_height="400dp"
         android:layout_centerInParent="true"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginRight="56dp"
         android:layout_marginBottom="216dp"
         android:max="100"
         android:progressDrawable="@drawable/progress_drawable"
@@ -58,7 +58,6 @@
         android:id="@+id/textView1"
         android:layout_width="127dp"
         android:layout_height="34dp"
-        android:layout_marginTop="1dp"
         android:layout_marginBottom="56dp"
         android:text="@string/max"
         android:textSize="25sp"
@@ -112,7 +111,7 @@
         android:id="@+id/textView10"
         android:layout_width="337dp"
         android:layout_height="46dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="@string/water_reserve_level"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -128,6 +127,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/indicator"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/indicator"
@@ -140,9 +140,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="68dp"
         android:layout_marginLeft="68dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="8dp"
         android:text="@string/water_value"
-        android:textSize="25sp"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/indicator" />
 
@@ -152,10 +152,34 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginBottom="2dp"
         android:text="0"
-        android:textSize="25sp"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/percentage"
         app:layout_constraintStart_toEndOf="@+id/textView16"
         app:layout_constraintTop_toTopOf="@+id/textView16" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/status"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <TextView
+        android:id="@+id/comment_status"
+        android:layout_width="271dp"
+        android:layout_height="86dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:text="--"
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/textView12"
+        app:layout_constraintTop_toTopOf="@+id/textView12" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
